RAG/manifests/rag-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-api
  namespace: ai-stack
  labels:
    app: rag-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-api
  template:
    metadata:
      labels:
        app: rag-api
    spec:
      containers:
      - name: rag-api
        image: pradyumnareddy/rag-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

        volumeMounts:
        - name: rag-data
          mountPath: /data

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1500Mi"
            cpu: "1500m"

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3

      volumes:
      - name: rag-data
        hostPath:
          path: /home/pradyumna/rag
          type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: rag-api
  namespace: ai-stack
spec:
  selector:
    app: rag-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
