RAG/manifests/upload-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-ui
  namespace: ai-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-ui
  template:
    metadata:
      labels:
        app: upload-ui
    spec:
      containers:
      - name: upload-ui
        image: pradyumnareddy/rag-upload-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: upload-ui
  namespace: ai-stack
spec:
  selector:
    app: upload-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
