RAG/manifests/upload-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upload-ui-ingress
  namespace: ai-stack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
  - host: upload.prajjumnareddy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: upload-ui
            port:
              number: 80
